--- a/ip/fifo.cmp
+++ b/ip/fifo.cmp
@@ -17,14 +17,14 @@
 component fifo
 	PORT
 	(
-		aclr		: IN STD_LOGIC ;
-		clock		: IN STD_LOGIC ;
 		data		: IN STD_LOGIC_VECTOR (15 DOWNTO 0);
+		rdclk		: IN STD_LOGIC ;
 		rdreq		: IN STD_LOGIC ;
+		wrclk		: IN STD_LOGIC ;
 		wrreq		: IN STD_LOGIC ;
-		empty		: OUT STD_LOGIC ;
-		full		: OUT STD_LOGIC ;
 		q		: OUT STD_LOGIC_VECTOR (15 DOWNTO 0);
-		usedw		: OUT STD_LOGIC_VECTOR (7 DOWNTO 0)
+		rdempty		: OUT STD_LOGIC ;
+		rdusedw		: OUT STD_LOGIC_VECTOR (7 DOWNTO 0);
+		wrfull		: OUT STD_LOGIC 
 	);
 end component;
