--- a/ip/fifo.cmp
+++ b/ip/fifo.cmp
@@ -17,6 +17,7 @@
 component fifo
 	PORT
 	(
+		aclr		: IN STD_LOGIC  := '0';
 		data		: IN STD_LOGIC_VECTOR (15 DOWNTO 0);
 		rdclk		: IN STD_LOGIC ;
 		rdreq		: IN STD_LOGIC ;
@@ -24,7 +25,10 @@ component fifo
 		wrreq		: IN STD_LOGIC ;
 		q		: OUT STD_LOGIC_VECTOR (15 DOWNTO 0);
 		rdempty		: OUT STD_LOGIC ;
+		rdfull		: OUT STD_LOGIC ;
 		rdusedw		: OUT STD_LOGIC_VECTOR (7 DOWNTO 0);
-		wrfull		: OUT STD_LOGIC 
+		wrempty		: OUT STD_LOGIC ;
+		wrfull		: OUT STD_LOGIC ;
+		wrusedw		: OUT STD_LOGIC_VECTOR (7 DOWNTO 0)
 	);
 end component;
